style.css
/*
Theme Name: iWelcome Theme
Author: Stephanie Tran
Author URI: https://stran.codes
Description: 
Version: 1.0
*/

/*--------------------------------------------------------------
        Globals
--------------------------------------------------------------*/
@import url('https://fonts.googleapis.com/css?family=Oswald:400,600|Roboto');
#front,.mastfoot {
  display: none;
}
#loader{
    padding-top:100px;
}
html{
    box-sizing: border-box;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}
ul,li { list-style-type: none;
        list-style-position:inside;
        margin:0;
        padding:0; }
html,
body {
    height: 100%;
}
body {
    font-family: "Roboto",sans-serif;
    font-size: 20px;
    line-height: 1.4;
}
#main{
    max-width:100%;
    overflow:hidden;
}
a {
    color: #000000;
    text-decoration: none!important;
}
a:hover {
    text-decoration: none!important;
    color:black;
}
h1,h2,h3,h4,h5,h6{
    font-family: 'Oswald', sans-serif;
    line-height: 1;
    font-weight: unset;
}
h1{
    font-size:200%;
}
h2{
    font-size:170%;
}
h3{
    font-size:150%;
    padding: 0px;
    margin: 0px;
}
ul,li{
    list-style:none;
}
.masthead {
    width: 100%;
    background-color: white;
}
.masthead h1 {
    color: black;
    font-size: 200%;
    text-shadow: none;
    float: left;
    padding-left: 20px;
}
.masthead img{
    float:right;
    height:70px;
    padding:10px;
}
.site-content{
    width:100%;
    overflow:hidden;
}
.site-title {
    padding-left: 20px;
}
.site-wrapper {
    display: table;
    width: 100%;
    height: 100%;
    /* For at least Firefox */
    min-height: 100%;
    table-layout:fixed;
}
.site-wrapper-inner {
    display: table-cell;
    vertical-align: top;
}
.cover-container {
    margin-right: auto;
    margin-left: auto;
}
.inner {
    padding: 70px 50px 20px 50px;
}
/* Social Nav */

.menu-social-container {
    display: block;
    position: fixed;
    left: 14px;
    bottom: 20px;
}

.page .icon {
    width: 30px;
    height: 75px;
    fill: white;
    -webkit-filter: drop-shadow( 1px -2px 5px #000);
    filter: drop-shadow( 1px -2px 5px #000);
}
.single .icon {
    width: 30px;
    height: 75px;
    fill: black;
}
/*--------------------------------------------------------------
        Frontpage
--------------------------------------------------------------*/
#loader{
    text-align: center;
margin: 0 auto;
display: block;

}
.float-left {
    vertical-align: bottom;
    float:left;
    width: 50%;
    padding-left: 20px;
}
.float-left h2{
    font-size:120%;
}
.float-right {
    vertical-align: bottom;
    font-size:250%;
}
.float-right i{
    position: absolute;
    right: 0;
    bottom: 0px;
}
.center{
    text-align:center;
}
.mastfoot {
     background: url(http://aito.ca/iwelcome/wp-content/uploads/2017/07/yellow-header-profiles2.png);
	background-attachment: fixed;
    background-size: auto;
    background-position: bottom;
	font-size:80%;
	width:100%;
    text-align:center;
}
.mastfoot a{
    color:white;
    text-shadow:1px -2px 5px #000;
}
/* Grid */
.grid-cell-container a{
    font-family: 'Oswald', sans-serif;
    line-height: 1;
    overflow: hidden;
    width: 100%;
display: block;


}
.first-box {
    padding-top: 100px;
    background-color: yellow!important;
    color: black;
    font-size: 200%;
}
.img-container {
    overflow: hidden;
	position: relative;
	overflow: hidden;
    background-color:black;
    transition: all .3s ease-in-out;
    padding: 0px;
margin: 0px;

}
.img-container:hover {
    overflow: hidden;
}
.post-title-link img {
    transition: all .3s ease-in-out;
    -webkit-filter: grayscale(100%);
    /* Ch 23+, Saf 6.0+, BB 10.0+ */
    filter: grayscale(100%);
    /* FF 35+ */
    width: 100%;
    opacity:0.7;
}
.post-title-link:hover img {
    webkit-filter: grayscale(0%);
    /* Ch 23+, Saf 6.0+, BB 10.0+ */
    filter: grayscale(0%);
    /* FF 35+ */
    opacity:1;
}
.post-title-link .grid-title {
    opacity:0;
	display: block;
	text-shadow: 2px 2px 15px black;
	color: white;
	padding: 10px 10px 10px 30px;
	font-size: 150%;
    text-align: right;
	width: 70%;
    position: absolute;
    bottom: 10px;
	opacity:1;
	right:0px;
	transition: all .2s ease-in;
}
.post-title-link .grid-title::after{
    font-family:"iwelcome";
    content: " \61";
}
.grid-outer::before,
.grid-outer::after{
    content:"";
    background-color: transparent!important;
}
.grid-outer {
    -webkit-column-count: 3;
    /* Chrome, Safari, Opera */
    -moz-column-count: 3;
    /* Firefox */
    column-count: 3;
    column-gap: 0px;
    background-color: transparent!important;
    opacity: 1;
    overflow: hidden;
}
.grid-outer li {
    width: 100%;
    padding: 0px;
}
.grid-outer li:last-child {
    background-color: yellow;
    padding: 20px;
}
@media (max-width: 950px) {
    .grid-outer {
        -webkit-column-count: 2;
        /* Chrome, Safari, Opera */
        -moz-column-count: 2;
        /* Firefox */
        column-count: 2;
    }
}
@media (max-width: 700px) {
    .grid-outer {
        -webkit-column-count: 2;
        /* Chrome, Safari, Opera */
        -moz-column-count: 2;
        /* Firefox */
        column-count: 2;
    }
}
@media (max-width: 500px) {
    .grid-outer {
        -webkit-column-count: 1;
        /* Chrome, Safari, Opera */
        -moz-column-count: 1;
        /* Firefox */
        column-count: 1;
    }
    .post-title-link img {
        -webkit-filter: none!important;
        /* Ch 23+, Saf 6.0+, BB 10.0+ */
        filter: none!important;
        /* FF 35+ */
        width: 100%;
        opacity:1 !important;
}
}
/*---   Section 2, Homepage ---*/
.section-2{
    padding: 400px 0px;
    background:url('http://aito.ca/iwelcome/wp-content/uploads/2017/07/iwelcomeamnesty2.png');
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
/* ... */

